<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:paddingTop="30dp"
    tools:context=".Pag_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:maxWidth="200dp"
            android:maxHeight="200dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/creative_growing_seed_logo_for_agriculture__farming__gardening_business"
            android:contentDescription="@string/todo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_de_utilizador"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsernameLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/palavra_passe"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton


            android:id="@+id/botaoLogin"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:insetLeft="30dp"
            android:insetRight="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/iniciar_sess_o"

            app:backgroundTint="#DEEDCB"
            app:cornerRadius="40dp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/botaoRegisto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/criar_conta"
            android:textAlignment="center"
            android:textColor="#118B68"
            android:translationY="100dp"
            android:visibility="visible"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>